change redirect pages

--- a/inventory.html
+++ b/inventory.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" href="/inventory.html">Inventario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/utilites.html">Utilidades</a>
+              <a class="nav-link " href="/utilities.html">Utilidades</a>
             </li>
           </ul>
         </div>
