--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" href="/styles/main.css">
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
     crossorigin="anonymous">
+
   <style>
     .bg-menu {
       background-color: #457b9d;
@@ -21,7 +22,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-menu">
       <div class="container">
-        <a class="navbar-brand" href="#">Component 2023 SAS</a>
+        <a class="navbar-brand" href="/">Component 2023 SAS</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,13 +30,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#" aria-current="page">Administrador</a>
+              <a class="nav-link" href="/administrator.html" aria-current="page">Administrador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Inventario</a>
+              <a class="nav-link" href="/inventory.html">Inventario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Utilidades</a>
+              <a class="nav-link" href="/utilities.html">Utilidades</a>
             </li>
           </ul>
         </div>
