change the redirection links

--- a/utilities.html
+++ b/utilities.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/administrator.html" aria-current="page">Administrador</a>
+              <a class="nav-link" href="administrator.html" aria-current="page">Administrador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/inventory.html">Inventario</a>
+              <a class="nav-link" href="inventory.html">Inventario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/utilities.html">Utilidades</a>
+              <a class="nav-link active" href="utilities.html">Utilidades</a>
             </li>
           </ul>
         </div>
