chage redirection to home

--- a/utilities.html
+++ b/utilities.html
@@ -23,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-menu">
       <div class="container">
-        <a class="navbar-brand" href="/">Component 2023 SAS</a>
+        <a class="navbar-brand" href="./index.html">Component 2023 SAS</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
