--- a/utilities.html
+++ b/utilities.html
@@ -62,45 +62,46 @@
             <input type="number" class="form-control" name="iva" id="iva" aria-describedby="helpId" placeholder="%" required>
           </div>
           <div class="mb-3">
-            <div class="d-flex justify-content-between">
-              <!-- Modal trigger button -->
-              <button type="submit" class="btn btn-success">
+            <!-- Modal trigger button -->
+            <div class="row d-flex justify-content-between">
+              <button type="submit" class="btn btn-success col-md-4">
                 Calcular venta del producto
               </button>
+              <button type="button" name="clean" id="clean" class="btn btn-danger col-md-4 mt-2 mt-md-0">Limpiar formulario</button>
 
-              <!-- Modal Body -->
-              <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
-              <div class="modal  fade" id="modaySale" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
-                <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="modalTitleId">Calcular venta del producto</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-md-4">Valor de venta $: <span id="viewSale"></span></div>
-                          <div class="col-md-4">Ganancia $: <span id="viewProfit"></span></div>
-                          <div class="col-md-4">IVA $: <span id="viewIVA"></span></div>
-                        </div>
+            </div>
+
+            <!-- Modal Body -->
+            <div class="modal  fade" id="modaySale" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+              <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitleId">Calcular venta del producto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-4">Valor de venta $: <span id="viewSale"></span></div>
+                        <div class="col-md-4">Ganancia $: <span id="viewProfit"></span></div>
+                        <div class="col-md-4">IVA $: <span id="viewIVA"></span></div>
                       </div>
                     </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <!-- <button type="button" class="btn btn-primary">Save</button> -->
-                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <!-- <button type="button" class="btn btn-primary">Save</button> -->
                   </div>
                 </div>
               </div>
-
-
-              <!-- Optional: Place to the bottom of scripts -->
-              <button type="button" name="clean" id="clean" class="btn btn-danger">Limpiar formulario</button>
             </div>
+
+
+
           </div>
-        </form>
       </div>
+      </form>
+    </div>
     </div>
   </main>
   <footer>
