--- a/controladores/ingresar.html
+++ b/controladores/ingresar.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="administrator.html" aria-current="page">Administrador</a>
+              <a class="nav-link" href="../administrator.html" aria-current="page">Administrador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="inventory.html">Inventario</a>
+              <a class="nav-link active" href="../inventory.html">Inventario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="utilities.html">Utilidades</a>
+              <a class="nav-link " href="../utilities.html">Utilidades</a>
             </li>
           </ul>
         </div>
@@ -95,7 +95,9 @@
             </div>
             <div class="card-footer text-center">
                 <hr>
-                <button type="submit" class="btn btn-danger">Registrar</button>
+                <a href="../inventory.html">
+                <button type="button" onclick="captura()" class="btn btn-danger">Registrar</button>
+              </a>
             </div>
          </form>
         </div>
