--- a/administrator.html
+++ b/administrator.html
@@ -29,9 +29,21 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="administrator.html" aria-current="page">Administrador</a>
-            </li>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Administrador
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                    <li><a class="dropdown-item" href="/src/controllers/database.php?db=create_db">Crear base de datos</a></li>
+                    <li><a class="dropdown-item" href="/src/controllers/database.php?db=create_table">Crear tabla</a></li>
+                    <li><a class="dropdown-item" href="#">Generar reporte PDF</a></li>
+                    <li><a class="dropdown-item" href="#">Generar backup</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
             <li class="nav-item">
               <a class="nav-link" href="inventory.html">Inventario</a>
             </li>
