--- a/administrator.html
+++ b/administrator.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 
 <head>
@@ -11,6 +12,8 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
     crossorigin="anonymous">
+
+    
   <style>
     .bg-menu {
       background-color: #457b9d;
@@ -45,7 +48,7 @@
               </ul>
             </div>
             <li class="nav-item">
-              <a class="nav-link" href="inventory.html">Inventario</a>
+              <a class="nav-link" href="inventory.php">Inventario</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="utilities.html">Utilidades</a>
