feat: add module product

--- a/controladores/consultar.html
+++ b/controladores/consultar.html
@@ -39,7 +39,7 @@
                   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                     <li><a class="dropdown-item" href="/src/controllers/database.php?db=create_db">Crear base de datos</a></li>
                     <li><a class="dropdown-item" href="/src/controllers/database.php?db=create_table">Crear tabla</a></li>
-                    <li><a class="dropdown-item" href="#">Generar reporte PDF</a></li>
+                    <li><a class="dropdown-item" href="/src/controllers/products.php?db=pdf">Generar reporte PDF</a></li>
                     <li><a class="dropdown-item" href="#">Generar backup</a></li>
                   </ul>
                 </li>
