feat: export products in pdf

--- a/controladores/ingresar.html
+++ b/controladores/ingresar.html
@@ -75,7 +75,7 @@
                   <div class="col-sm-12">
 
                     <div class="form-group">
-                      <label for="codigo">Codigo de producto</label>
+                      <label for="codigo">Código de producto</label>
                       <input type="text" class="form-control" name="code" id="codigo" placeholder="Digite el codigo del producto" required>
                     </div>
 
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="form-group">
-                      <label for="cantidad">Cantidd comprada del producto</label>
+                      <label for="cantidad">Cantidad comprada del producto</label>
                       <input type="text" class="form-control" name="quantity" id="cantidad" placeholder="Digite la cantidad comprada del producto" required>
                     </div>
 
